[package]
name = "flex_custom_policy"
version = "0.1.0"
edition = "2021"
authors = ["Dejim Juang <dejimj@gmail.com>"]
description = "Example custom policy for MuleSoft Flex Gateway"

[lib]
crate-type = ["cdylib"]
name="flex_custom_policy"
path="src/lib.rs"

[dependencies]
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"